# sidekick

./: .gitignore  CMakeLists.txt  README.md
evaluation/: emulation.py
evaluation/data/: jitter_stats_emulation_proxy_1x.csv
evaluation/data/emulation/: jitter_buffer_emulation_proxy_4x.csv  jitter_stats_emulation_no_proxy.csv  jitter_stats_emulation_proxy_2x.csv
evaluation/data/real_world/: noproxy_10_stats.csv  noproxy_1_stats.csv  noproxy_2_stats.csv  noproxy_3_stats.csv  noproxy_4_stats.csv  noproxy_5_stats.csv  noproxy_6_stats.csv  noproxy_7_stats.csv  noproxy_8_stats.csv  proxy_10_stats.csv  proxy_1_stats.csv  proxy_3_stats.csv  (+2 more)
evaluation/real_world_2/: noproxy_9_stats.csv  proxy_2_stats.csv  proxy_4_stats.csv  proxy_5_stats.csv  proxy_7_stats.csv  proxy_8_stats.csv
evaluation/tests/: no-proxy-run1.csv  no-proxy-run10.csv  no-proxy-run2.csv  no-proxy-run3.csv  no-proxy-run4.csv  no-proxy-run5.csv  no-proxy-run6.csv  no-proxy-run7.csv  no-proxy-run8.csv  no-proxy-run9.csv  proxy-run1.csv  proxy-run10.csv  proxy-run2.csv  proxy-run3.csv  proxy-run4.csv  proxy-run5.csv  proxy-run6.csv  proxy-run7.csv  proxy-run8.csv  proxy-run9.csv
scripts/: run_client.sh  run_proxy.sh  run_server.sh
src/: CMakeLists.txt  playground.cc  sidekick_proxy.cc  sidekick_proxy.hh  webrtc_client.cc  webrtc_protocol.hh  webrtc_server.cc
util/: CMakeLists.txt  address.cc  address.hh  audio_buffer.hh  conqueue.hh  crypto.hh  ipv4_datagram.hh  jitter_buffer.hh  parser.hh  protocol.hh  quack.cc  quack.hh  sidekick_protocol.hh  socket.cc  socket.hh  tcp_receiver_message.hh
